--- a/python-project-1/lists-and-loops.ipynb
+++ b/python-project-1/lists-and-loops.ipynb
@@ -343,10 +343,9 @@
     "        fib[i] = 1\n",
     "    elif i == 2:\n",
     "        fibonacci[i] = fibonacci[i-1] + 1\n",
-    "    \n",
     "    elif i > 2:\n",
     "        fibonacci[i] = fibonacci[i-1] + fibonacci[i-2]\n",
-    "print(fibonacci)\n"
+    "print(fibonacci)"
    ]
   },
   {
