Updated dates comparison answer

--- a/python-project-2/2-challenge.ipynb
+++ b/python-project-2/2-challenge.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 154,
    "id": "e3e6220c",
    "metadata": {},
    "outputs": [
@@ -385,19 +385,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "293983\n",
-      "293983\n",
-      "168201\n",
+      "The first and last date in the orderlines csv are 2018-03-14 13:58:36 and 2017-01-01 00:07:19 respectively\n",
+      "The first and last date in the orders csv are 2018-03-14 13:58:36 and 2017-01-01 00:07:19 respectively\n",
       "\n",
       "\n",
-      "(293983,)\n",
-      "204855\n",
-      "251631\n",
+      "There are 251631 unique dates in the orderlines csv.\n",
+      "There are 224828 unique dates in the orders csv.\n",
       "\n",
       "\n",
-      "(226909,)\n",
-      "226909\n",
-      "224828\n"
+      "97245 dates from orders do not exist in orderlines\n",
+      "125782 dates from orderlines do not exist in orders\n",
+      "\n",
+      "\n",
+      "If we round the timestamps to the minute then:\n",
+      "0 dates from orders do not exist in orderlines\n",
+      "0 dates from orderlines do not exist in orders\n",
+      "\n",
+      "\n",
+      "This implies that it takes some time between orders being placed and the orderlines database being updated with the individual products\n"
      ]
     }
    ],
@@ -418,21 +423,31 @@
     "                            'state': str}, \n",
     "                     parse_dates=['created_date'])\n",
     "\n",
-    "print(orderlines.date.dt.hour.isin(orders.created_date.dt.hour).sum())\n",
-    "print(orderlines.date.dt.minute.isin(orders.created_date.dt.minute).sum())\n",
     "\n",
-    "print(orderlines.date.isin(orders.created_date).sum())\n",
-    "print('\\n')\n",
-    "      \n",
-    "print(orderlines.id_order.shape)\n",
-    "print(orderlines.id_order.nunique())\n",
-    "print(orderlines.date.nunique())\n",
+    "# print(f\"{}\")\n",
+    "print(f\"The first and last date in the orderlines csv are {orderlines.date.max()} and {orderlines.date.min()} respectively\")\n",
+    "print(f\"The first and last date in the orders csv are {orders.created_date.max()} and {orders.created_date.min()} respectively\")\n",
     "print('\\n')\n",
     "\n",
+    "print(f\"There are {orderlines.date.nunique()} unique dates in the orderlines csv.\")\n",
+    "print(f\"There are {orders.created_date.nunique()} unique dates in the orders csv.\")\n",
+    "print('\\n')\n",
     "\n",
-    "print(orders.order_id.shape)\n",
-    "print(orders.order_id.nunique())\n",
-    "print(orders.created_date.nunique())"
+    "dates_not_in_orders = orderlines[~orderlines.date.isin(orders.created_date)].shape[0]\n",
+    "dates_not_in_orderlines = orders[~orders.created_date.isin(orderlines.date)].shape[0]\n",
+    "print(f\"{dates_not_in_orderlines} dates from orders do not exist in orderlines\")\n",
+    "print(f\"{dates_not_in_orders} dates from orderlines do not exist in orders\")\n",
+    "print('\\n')\n",
+    "\n",
+    "\n",
+    "print(\"If we round the timestamps to the minute then:\")\n",
+    "dates_to_minute_not_in_orderlines = orders[~orders.created_date.dt.minute.isin(orderlines.date.dt.minute)].shape[0]\n",
+    "dates_to_minute_not_in_orders = orderlines[~orderlines.date.dt.minute.isin(orders.created_date.dt.minute)].shape[0]\n",
+    "print(f\"{dates_to_minute_not_in_orderlines} dates from orders do not exist in orderlines\")\n",
+    "print(f\"{dates_to_minute_not_in_orders} dates from orderlines do not exist in orders\")\n",
+    "\n",
+    "print('\\n')\n",
+    "print(\"This implies that it might take some time between orders being placed and the orderlines database being updated with the individual products\")\n"
    ]
   },
   {
