Renamed python-project-2 challenges

--- a/python-project-2/2-data-aggregation.ipynb
+++ b/python-project-2/2-data-aggregation.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 155,
    "id": "e3e6220c",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
       "0 dates from orderlines do not exist in orders\n",
       "\n",
       "\n",
-      "This implies that it takes some time between orders being placed and the orderlines database being updated with the individual products\n"
+      "This implies that it might take some time between orders being placed and the orderlines database being updated with the individual products\n"
      ]
     }
    ],
