Finished data cleaning

--- a/python-project-2/1-data-exploration.ipynb
+++ b/python-project-2/1-data-exploration.ipynb
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "# use contextual help to show all the parameters inside read_csv\n",
-    "df = pd.read_csv('data/eniac/orderlines.csv', sep=',')"
+    "df = pd.read_csv('../data/eniac/orderlines.csv', sep=',')"
    ]
   },
   {
