--- a/python-project-2/2-data-aggregation.ipynb
+++ b/python-project-2/2-data-aggregation.ipynb
@@ -124,7 +124,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('data/eniac/orderlines.csv')\n",
+    "df = pd.read_csv('../data/eniac/orderlines.csv')\n",
     "df.head()"
    ]
   },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 160,
    "id": "e3e6220c",
    "metadata": {},
    "outputs": [
@@ -448,6 +448,36 @@
     "\n",
     "print('\\n')\n",
     "print(\"This implies that it might take some time between orders being placed and the orderlines database being updated with the individual products\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "a8ae46cb-236d-4626-9371-b4ce063f91b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "127532"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_orders = orderlines.merge(\n",
+    "    orders, \n",
+    "    how='left', \n",
+    "    left_on='id_order', \n",
+    "    right_on='order_id'\n",
+    ").assign(\n",
+    "    check_date = lambda x: x['date'] == x['created_date']\n",
+    ")\n",
+    "\n",
+    "merged_orders[merged_orders.check_date == False].shape[0]"
    ]
   },
   {
@@ -1578,8 +1608,6 @@
     }
    ],
    "source": [
-    "# WHY DO WE USE ASSIGN INSTEAD OF JUST df['total_price] = df['product_quantity'] * df['unit_price']\n",
-    "\n",
     "df.assign(total_price = df['product_quantity'] * df['unit_price']).head()"
    ]
   },
@@ -2271,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 178,
    "id": "cdc84feb",
    "metadata": {},
    "outputs": [
@@ -2351,7 +2379,7 @@
        "371120                   5"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2359,7 +2387,8 @@
    "source": [
     "# I am assuming that by 'top 6 orders' they mean the orders with the largest product_quantity\n",
     "(\n",
-    "    orderlines[orderlines.date.dt.date == pd.Timestamp('2017-07-01')]\n",
+    "orderlines\n",
+    "    .loc[orderlines.date.dt.date == pd.Timestamp('2017-07-01')]\n",
     "    .groupby('id_order')\n",
     "    .agg({'product_quantity':'sum'})\n",
     "    .sort_values('product_quantity', ascending=False)\n",
@@ -2377,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 176,
    "id": "073948f1",
    "metadata": {},
    "outputs": [
@@ -2402,39 +2431,36 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>month</th>\n",
        "      <th>product_quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>January</td>\n",
+       "      <th>January</th>\n",
        "      <td>66415</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>November</td>\n",
+       "      <th>November</th>\n",
        "      <td>46375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>February</td>\n",
+       "      <th>February</th>\n",
        "      <td>40542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>December</td>\n",
+       "      <th>December</th>\n",
        "      <td>39094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>March</td>\n",
+       "      <th>March</th>\n",
        "      <td>29252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>October</td>\n",
+       "      <th>October</th>\n",
        "      <td>18178</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2442,16 +2468,17 @@
        "</div>"
       ],
       "text/plain": [
-       "      month  product_quantity\n",
-       "0   January             66415\n",
-       "1  November             46375\n",
-       "2  February             40542\n",
-       "3  December             39094\n",
-       "4     March             29252\n",
-       "5   October             18178"
+       "          product_quantity\n",
+       "month                     \n",
+       "January              66415\n",
+       "November             46375\n",
+       "February             40542\n",
+       "December             39094\n",
+       "March                29252\n",
+       "October              18178"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2463,8 +2490,6 @@
     "    .groupby(['month'])\n",
     "    .agg({'product_quantity':'sum'})\n",
     "    .sort_values('product_quantity', ascending=False)\n",
-    "    .reset_index()\n",
-    "    #.groupby('month')\n",
     "    .head(6)\n",
     ")"
    ]
@@ -2481,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 179,
    "id": "120de9ab",
    "metadata": {},
    "outputs": [
@@ -2506,39 +2531,36 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>month</th>\n",
        "      <th>product_quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>November</td>\n",
+       "      <th>November</th>\n",
        "      <td>46375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>December</td>\n",
+       "      <th>December</th>\n",
        "      <td>39094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>January</td>\n",
+       "      <th>January</th>\n",
        "      <td>24465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>October</td>\n",
+       "      <th>October</th>\n",
        "      <td>18178</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>July</td>\n",
+       "      <th>July</th>\n",
        "      <td>17923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>February</td>\n",
+       "      <th>February</th>\n",
        "      <td>16285</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2546,28 +2568,122 @@
        "</div>"
       ],
       "text/plain": [
-       "      month  product_quantity\n",
-       "0  November             46375\n",
-       "1  December             39094\n",
-       "2   January             24465\n",
-       "3   October             18178\n",
-       "4      July             17923\n",
-       "5  February             16285"
+       "          product_quantity\n",
+       "month                     \n",
+       "November             46375\n",
+       "December             39094\n",
+       "January              24465\n",
+       "October              18178\n",
+       "July                 17923\n",
+       "February             16285"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(\n",
-    "orderlines[orderlines.date.dt.year == 2017]\n",
+    "orderlines\n",
+    "    .loc[orderlines.date.dt.year == 2017]\n",
     "    .assign(month = orderlines['date'].dt.strftime('%B'))\n",
     "    .groupby(['month'])\n",
     "    .agg({'product_quantity':'sum'})\n",
     "    .sort_values('product_quantity', ascending=False)\n",
-    "    .reset_index()\n",
+    "    .head(6)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "1fd15500-5507-4844-93f8-49197601a038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>November</th>\n",
+       "      <td>46375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>December</th>\n",
+       "      <td>39094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>January</th>\n",
+       "      <td>24465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>October</th>\n",
+       "      <td>18178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>July</th>\n",
+       "      <td>17923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>February</th>\n",
+       "      <td>16285</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          product_quantity\n",
+       "month                     \n",
+       "November             46375\n",
+       "December             39094\n",
+       "January              24465\n",
+       "October              18178\n",
+       "July                 17923\n",
+       "February             16285"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Option 2\n",
+    "(\n",
+    "orderlines\n",
+    "    .assign(month = orderlines['date'].dt.strftime('%B'),\n",
+    "           year = orderlines['date'].dt.strftime('%Y'))\n",
+    "    .query(\"year == '2017'\")\n",
+    "    .groupby(['month'])\n",
+    "    .agg({'product_quantity':'sum'})\n",
+    "    .sort_values('product_quantity', ascending=False)\n",
     "    .head(6)\n",
     ")"
    ]
@@ -2664,7 +2780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 190,
    "id": "833134d9",
    "metadata": {},
    "outputs": [
@@ -2697,75 +2813,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>April</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>3286</td>\n",
+       "      <td>November</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>9717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>August</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>2634</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>December</td>\n",
        "      <td>Wednesday</td>\n",
        "      <td>7010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>February</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>7166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>7</th>\n",
        "      <td>January</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>13747</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>5420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>16</th>\n",
        "      <td>July</td>\n",
-       "      <td>Wednesday</td>\n",
+       "      <td>Monday</td>\n",
        "      <td>4018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>June</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>2572</td>\n",
+       "      <th>17</th>\n",
+       "      <td>October</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>3849</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>March</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>5378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>18</th>\n",
        "      <td>May</td>\n",
        "      <td>Wednesday</td>\n",
        "      <td>3574</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>November</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>9717</td>\n",
+       "      <th>21</th>\n",
+       "      <td>April</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>3286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>October</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>3849</td>\n",
+       "      <th>24</th>\n",
+       "      <td>February</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>3066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>27</th>\n",
        "      <td>September</td>\n",
-       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
        "      <td>2893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>August</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>2634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>March</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>2628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>June</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>2572</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2773,21 +2889,21 @@
       ],
       "text/plain": [
        "        month   week_day  product_quantity\n",
-       "0       April  Wednesday              3286\n",
-       "1      August  Wednesday              2634\n",
-       "2    December  Wednesday              7010\n",
-       "3    February  Wednesday              7166\n",
-       "4     January  Wednesday             13747\n",
-       "5        July  Wednesday              4018\n",
-       "6        June  Wednesday              2572\n",
-       "7       March  Wednesday              5378\n",
-       "8         May  Wednesday              3574\n",
-       "9    November  Wednesday              9717\n",
-       "10    October  Wednesday              3849\n",
-       "11  September  Wednesday              2893"
+       "0    November     Friday              9717\n",
+       "4    December  Wednesday              7010\n",
+       "7     January     Monday              5420\n",
+       "16       July     Monday              4018\n",
+       "17    October     Monday              3849\n",
+       "18        May  Wednesday              3574\n",
+       "21      April    Tuesday              3286\n",
+       "24   February     Monday              3066\n",
+       "27  September     Friday              2893\n",
+       "32     August  Wednesday              2634\n",
+       "33      March  Wednesday              2628\n",
+       "36       June   Thursday              2572"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2795,20 +2911,31 @@
    "source": [
     "(\n",
     "orderlines\n",
-    "    .assign(month = df.date.dt.strftime('%B'), week_day = df.date.dt.strftime('%A')) # dt.month)\n",
+    "    .assign(year = orderlines['date'].dt.strftime('%Y'),\n",
+    "            month = df.date.dt.strftime('%B'), \n",
+    "            week_day = df.date.dt.strftime('%A')) # dt.month)\n",
+    "    .query(\"year == '2017'\")\n",
     "    .groupby(['month', 'week_day'])\n",
     "    .agg({'product_quantity': 'sum'})\n",
+    "    .sort_values('product_quantity', ascending=False)\n",
     "    .reset_index()\n",
     "    .groupby('month')\n",
-    "    .max()\n",
-    "    .reset_index()\n",
-    ")\n"
+    "    .head(1)\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c4f44cd4-1868-420f-8a28-bb4c6911f486",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "865397b0-b9d1-47c2-9583-aa508e08fcdf",
    "metadata": {},
    "outputs": [],
    "source": []
